--- a/EntityServices.csproj
+++ b/EntityServices.csproj
@@ -9,7 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="EfCore.GenericServices" Version="2.0.0-preview001" />
+        <PackageReference Include="EfCore.GenericServices" Version="2.0.0" />
         <PackageReference Include="EfCore.GenericServices.AspNetCore" Version="3.0.2" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.2" />
     </ItemGroup>
