--- a/EntityServices.csproj
+++ b/EntityServices.csproj
@@ -6,6 +6,8 @@
 	    <Version>0.1.4</Version>
 	    <Company>Bulb Digital</Company>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <AssemblyVersion>0.1.5.0</AssemblyVersion>
+        <FileVersion>0.1.5.0</FileVersion>
     </PropertyGroup>
 
     <ItemGroup>
