--- a/EntityServices.csproj
+++ b/EntityServices.csproj
@@ -1,17 +1,14 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;netcoreapp5.0</TargetFrameworks>
     <PackageId>EntityServices</PackageId>
-    <Version>0.1.17</Version>
+    <Version>0.1.18</Version>
     <Company>Bulb Digital</Company>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="EfCore.GenericServices" Version="3.3.0" />
-    <PackageReference Include="EfCore.GenericServices.AspNetCore" Version="4.1.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.17" />
+    <PackageReference Include="EfCore.GenericServices" Version="5.0.1"/>
+    <PackageReference Include="EfCore.GenericServices.AspNetCore" Version="4.1.1"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.9"/>
   </ItemGroup>
-
 </Project>
