--- a/EntityServices.csproj
+++ b/EntityServices.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.1;netcoreapp6.0</TargetFrameworks>
+		<TargetFrameworks>netcoreapp6.0</TargetFrameworks>
 		<PackageId>EntityServices</PackageId>
 		<Version>0.1.20</Version>
 		<Company>Bulb Digital</Company>
